# sa-pgas

./: .clang-format  BUILDING  CMakeLists.txt  LICENSE  README
examples/: CMakeLists.txt  jacobi.cpp
examples/cuda/: CMakeLists.txt  header.h  kernel.cu  main.cpp
examples/muadd/: muadd.cpp
examples/old/muadd/: CMakeLists.txt  muadd.cpp
examples/old/scatter/: CMakeLists.txt  scatter.cpp
examples/old/seidel/: seidel.cpp
examples/old/simple_dist_matrix/: CMakeLists.txt  simple_dist_matrix.cpp
examples/pgas_addr/: CMakeLists.txt  pgas_addr.cpp
examples/scatter/: scatter.cpp
examples/seidel/: CMakeLists.txt  seidel.cpp
examples/simple_dist_matrix/: simple_dist_matrix.cpp
include/adabs/: adabs.h  allocator.h  gasnet_config.h  local.h  matrix.h  matrix_base.h  memcpy.h  pgas_addr.h  pgas_ref.h  remote.h  remote_matrix.h  vector.h
include/adabs/collective/: allocator.h  everywhere.h  pgas_addr.h  vector.h  vector_base.h
include/adabs/collective/old/: vector.h  vector_base (Kopie).h
include/adabs/cuda_device/: accessors.h
include/adabs/cuda_host/: allocator.h  local.h  pgas_addr.h
include/adabs/distributed/: matrix.h  matrix_base.h  row_distribution.h
include/adabs/distributed/old/: matrix.h
include/adabs/impl/: callbacks.h  pgas_addr.h  remote_mem_management.h
include/adabs/old/: matrix.h  matrix_base.h  pgas_addr.h.old  pgas_ref.h  remote_matrix.h
include/adabs/tools/: alignment.h  ptr_divider.h  tile.h  tools.h
include/psam/: matrix.hpp  memblock.hpp
src/: CMakeLists.txt  adabs.cpp  pgas_ref.cpp
src/collective/: allocator.cpp  vector_base.cpp
src/collective/old/: vector_base.cpp
src/impl/: callbacks.cpp  pgas_addr.cpp  remote_mem_management.cpp
src/impl/old/: remote_mem_management.cpp
src/old/: pgas_ref.cpp
tests/: CMakeLists.txt
tests/messergebnisse/: result.ods
